syntax = "proto3";
package protocol;
option go_package = "..;protocol";

import "resources.proto";
import "plugin.proto";
import "common.proto";
import "control.proto";
//import "cmdb.proto";
//import "ability.proto";

// 顶层消息
message PlatformMessage {
  // header
  RouterMessage Header = 1;
  // body
  ControlMessage Control = 2;
  PluginMessage Plugin = 3;
//  CmdbMessage Cmdb = 15;
  ResourceMessage Resource = 20;
}


